# python-package-template

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: devcontainer-ci.yaml  python-format.yaml  python-lint.yaml  python-static-analysis.yaml  python-tests.yaml  release.yaml
tests/: test_main_module.py
